tests/should_succeed/gt_ge_lt_le.jou
cdecl printf(format: byte*, ...) -> int

def main() -> int:
    printf("%d %d %d %d\n", 1 < 1, 1 < 2, 2 < 1, 2 < 2)     # Output: 0 1 0 0
    printf("%d %d %d %d\n", 1 > 1, 1 > 2, 2 > 1, 2 > 2)     # Output: 0 0 1 0
    printf("%d %d %d %d\n", 1 <= 1, 1 <= 2, 2 <= 1, 2 <= 2) # Output: 1 1 0 1
    printf("%d %d %d %d\n", 1 >= 1, 1 >= 2, 2 >= 1, 2 >= 2) # Output: 1 0 1 1
    return 0
