tests/syntax_error/keyword_uint64.jou
def main() -> int:
    uint64 = 1  # Error: expected an expression, got the 'uint64' keyword
    return 0
